--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -1,19 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/master.css">
-    <title>Document</title>
-</head>
+    <%- include("layouts/head.ejs")%>
 <body>
-    <nav>
-        <a href="home">Home</a>
-        <a href="about">About</a>
-        <a href="contact">Contact</a>
-        <a href="me">Me</a>
-    </nav>
+    <%- include("layouts/nav.ejs")%>
     <h1>This is being served by our viw engine</h1>
     
 </body>
