--- a/server/views/me.ejs
+++ b/server/views/me.ejs
@@ -7,6 +7,7 @@
     <%- include("layouts/nav.ejs")%>
     <h1>My Personal Page</h1>
     <p>Also explore that how can you connect it with MongoDB </p>
+    <p>Explore </p>
     <form method="POST" action="/me">
         <input type="text" name="userName" placeholder="User Name"><br>
         <input type="password" name="password" placeholder="Password"><br>
