commit after midII

--- a/server/views/me.ejs
+++ b/server/views/me.ejs
@@ -13,6 +13,13 @@
         <input type="password" name="password" placeholder="Password"><br>
         <button type="submit">Send</button>
     </form>
+    <p>
+        For Now as we press the send button the sent data needs to be shown in console below
+        and you are redirected to the same page.
+
+        Do not use body parser explore express and post 
+        
+    </p>
     
 </body>
 </html>
